Update theme to work with Pastanaga 2.58.0
  - Add rhythm 3.5
  - Update text field tokens
  - Update password input structure and style
  - Add `externalLabel` property on kb profile page
  - Add a gap between the fields on service access page

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
@@ -18,7 +18,8 @@
         <div fxFlex="70%">
           <pa-input
             formControlName="uid"
-            [readonly]="true"></pa-input>
+            externalLabel
+            readonly></pa-input>
         </div>
       </div>
 
@@ -33,6 +34,7 @@
         <div fxFlex="70%">
           <pa-input
             formControlName="slug"
+            externalLabel
             [errorMessages]="validationMessages.slug"></pa-input>
         </div>
       </div>
@@ -48,6 +50,7 @@
         <div fxFlex="70%">
           <pa-input
             formControlName="title"
+            externalLabel
             [errorMessages]="validationMessages.title"></pa-input>
         </div>
       </div>
@@ -61,6 +64,7 @@
         <div fxFlex="70%">
           <pa-textarea
             formControlName="description"
+            externalLabel
             rows="4"></pa-textarea>
         </div>
       </div>
