--- a/libs/sistema/src/lib/password-input/password-input.component.scss
+++ b/libs/sistema/src/lib/password-input/password-input.component.scss
@@ -1,18 +1,13 @@
 @import 'variables';
 
 .nsi-password-input {
-  align-items: flex-start;
-  display: flex;
-  gap: rhythm(1);
-
-  pa-button {
-    margin-top: rhythm(0.25);
+  .pa-field-container {
+    align-items: center;
+    display: flex;
+    gap: rhythm(0.5);
+    padding-right: rhythm(0.5);
   }
   pa-button ::ng-deep .pa-button:not(:disabled).pa-secondary.pa-basic {
     color: $color-text-field-label-regular;
-  }
-
-  .pa-field {
-    flex: 1 0 auto;
   }
 }
