--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.scss
@@ -21,7 +21,7 @@ h2 {
   margin-top: 0;
 }
 
-.labelset-selection {
+.select {
   margin-bottom: rhythm(2);
   display: flex;
   align-items: center;
