--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
@@ -8,7 +8,7 @@
         class="warning">
         {{ 'stash.settings.processes.training.not-allowed' | translate }}
       </div>
-      <section *ngFor="let type of trainingList">
+      <section *ngFor="let type of enabledTrainings | async">
         <h2>{{ 'stash.settings.processes.' + type | translate }}</h2>
         <p class="last-run">
           <small>
