--- a/apps/dashboard/src/app/widgets/widget-generator.component.scss
+++ b/apps/dashboard/src/app/widgets/widget-generator.component.scss
@@ -23,6 +23,10 @@ $width-configuration: rhythm(56);
     }
   }
 
+  .preview-container {
+    display: flex;
+  }
+
   .snippet-configuration-container {
     display: flex;
     gap: rhythm(3);
