Dashboard home page improvements
  - No more black box for API endpoint block
  - Add copy button allowing to copy the endpoint in one click
  - Improve stats box style + remove the refresh option
  - Update copy on state box + move it below stats box
  - Update desktop box
  - No more color-neutral-background (replaced by color-neutral-lightest)

--- a/apps/dashboard/src/app/components/section-navbar/section-navbar.component.scss
+++ b/apps/dashboard/src/app/components/section-navbar/section-navbar.component.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .section-navbar {
-  background-color: $color-neutral-background;
+  background-color: $color-neutral-lightest;
   min-height: 100vh;
 
   .section-navbar-content {
