--- a/libs/common/src/lib/user/login/login.component.scss
+++ b/libs/common/src/lib/user/login/login.component.scss
@@ -64,7 +64,7 @@
   .login_social_button {
     -webkit-appearance: none;
 
-    background-color: $color-neutral-background;
+    background-color: $color-neutral-lightest;
     border: none;
     border-radius: $border-radius-default;
     box-shadow: var(--stf-shadow-button) $color-neutral-light;
