Basic buttons for resource list bulk actions and table options

--- a/apps/dashboard/src/app/components/label/label-dropdown/label-dropdown.component.html
+++ b/apps/dashboard/src/app/components/label/label-dropdown/label-dropdown.component.html
@@ -2,6 +2,7 @@
   <nsi-dropdown-button
     [popupRef]="labelSelection"
     [size]="size"
+    [aspect]="aspect"
     [open]="open">
     <ng-content></ng-content>
   </nsi-dropdown-button>
