--- a/apps/dashboard/src/app/resources/resource-list.component.scss
+++ b/apps/dashboard/src/app/resources/resource-list.component.scss
@@ -18,7 +18,6 @@ $table-breakpoint: 1400px;
 .resource-list-header {
   align-items: center;
   background-color: $color-light-stronger;
-  border-bottom: 1px solid $color-neutral-lighter;
   display: flex;
   height: rhythm(8);
   position: sticky;
@@ -28,6 +27,7 @@ $table-breakpoint: 1400px;
   .resource-bulk-actions {
     align-items: center;
     display: flex;
+    font-weight: $font-weight-regular;
     gap: rhythm(2);
     padding-left: rhythm(0.5);
   }
@@ -48,7 +48,6 @@ $table-breakpoint: 1400px;
 }
 
 .table-container {
-  padding-top: rhythm(4);
   position: relative;
   max-height: 100%;
   overflow: auto;
