--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -69,7 +69,7 @@ ul.sw-dropdown-options {
     justify-content: space-between;
 
     .label-set-title {
-      flex: 1 0 auto;
+      flex: 1 1 0;
     }
     .label-set-color {
       flex: 0 0 auto;
