--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -16,6 +16,9 @@
             <span class="nav-link-title">{{ 'stash.home' | translate }}</span>
           </a>
         </div>
+      </div>
+
+      <div class="nav-group">
         <div class="group-items">
           <a
             class="nav-link"
@@ -44,13 +47,11 @@
       <div class="nav-group">
         <div class="group-items">
           <a
-            *ngIf="isActivityEnabled | async"
-            [routerLink]="kbUrl + '/activity'"
-            routerLinkActive="active"
             class="nav-link"
-            [class.disabled]="!(isAdminOrContrib | async)">
-            <pa-icon name="activity-log"></pa-icon>
-            <span class="nav-link-title">{{ 'stash.side.activity' | translate }}</span>
+            routerLinkActive="active"
+            [routerLink]="kbUrl + '/search'">
+            <pa-icon name="search"></pa-icon>
+            <span class="nav-link-title">{{ 'stash.search' | translate }}</span>
           </a>
           <a
             [routerLink]="kbUrl + '/resources'"
@@ -58,6 +59,15 @@
             class="nav-link">
             <pa-icon name="list"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.list' | translate }}</span>
+          </a>
+          <a
+            *ngIf="isActivityEnabled | async"
+            [routerLink]="kbUrl + '/activity'"
+            routerLinkActive="active"
+            class="nav-link"
+            [class.disabled]="!(isAdminOrContrib | async)">
+            <pa-icon name="activity-log"></pa-icon>
+            <span class="nav-link-title">{{ 'stash.side.activity' | translate }}</span>
           </a>
           <a
             *ngIf="isOntologiesEnabled | async"
@@ -72,7 +82,7 @@
             [routerLink]="[kbUrl + '/entities']"
             routerLinkActive="active"
             class="nav-link">
-            <pa-icon name="search-plus"></pa-icon>
+            <pa-icon name="form"></pa-icon>
             <span class="nav-link-title">{{ 'generic.insights' | translate }}</span>
           </a>
         </div>
