--- a/apps/dashboard/src/app/resources/resource-list.component.scss
+++ b/apps/dashboard/src/app/resources/resource-list.component.scss
@@ -25,6 +25,25 @@ $table-breakpoint: 1400px;
       width: rhythm(16);
     }
   }
+
+  .status-buttons-container {
+    align-items: center;
+    display: flex;
+    gap: rhythm(2);
+    justify-content: flex-end;
+    min-width: rhythm(24);
+
+    .status-button {
+      align-items: center;
+      display: flex;
+      gap: rhythm(0.25);
+    }
+    .file-count {
+      font-size: font-size(l);
+      font-weight: $font-weight-bold;
+      line-height: line-height(m);
+    }
+  }
 }
 
 .resource-filters {
